external/lib25519-20241004/build/arm64/multiscalar/ed25519/arm64-maa4-redmul/shared/result-compile-ge25519_p1p1_to_p2
ge25519_p1p1_to_p2.S:449:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
